# school-management

./: .env  .gitignore  .nvim.lua  ADMIN_FIX_SUMMARY.md  COMPLETION_CHECKLIST.txt  CRUD_FIXED_SUMMARY.md  FILE_REFERENCE.md  INDEX.md  PERMISSION_IMPLEMENTATION_SUMMARY.md  README.md  SISWA_JADWAL_FIXED.md  bug.html  completion_report.py  conftest.py  database_demo.py  lmao  pyproject.toml  pytest.ini  requirements.txt  switch_ta.py  test_role_badge.html  update_templates.py
apps/academics/: admin.py  forms.py  models.py  urls.py  views.py
apps/core/: admin_dashboard.py  mixins.py  models.py  urls.py  views.py
apps/grades/: admin.py  forms.py  models.py  urls.py  views.py
apps/users/: admin.py  forms.py  managers.py  mixins.py  models.py  permissions.py  urls.py  views.py
config/: settings.py  urls.py
docs/: ANALYSIS_SUMMARY.md  DATABASE_DOCUMENTATION.md  ERD.txt  EXECUTIVE_SUMMARY.md  FITUR_APLIKASI_LENGKAP.md  FITUR_APLIKASI_QUICK.md  FITUR_DIAGRAM_VISUAL.md  FITUR_INDEX.md  FITUR_MUDAH_DIPAHAMI.md  FITUR_RINGKAS.md  PROJECT_OVERVIEW.md  ROLE_BADGE_FIX.md  SIGMA_ADMIN_SUMMARY.md  START_HERE.txt  STRUKTUR_LENGKAP_SIGMA.md  TODO.md  VERIFICATION_REPORT.txt  backend-summary.md  frontend_summary.md  models_summary.md  quick_fixes.md  recommendations.md  routes.csv  security_audit.md  test_plan.md
extras/: school_management.sql
tailwindcss_theme/static_src/: package-lock.json  package.json
templates/: 403.html  404.html  500.html  base_generic.html
templates/admin/: index.html
tests/: README.md  __init__.py  example_tests.py  factories.py
(+97 files in other folders)
